# KNNN-Tetris-C-

./: CMakeLists.txt  Phân công.md  README.md  Tetris_game_test_log_vi.md
Deadline/: Tuần 2.md  Tuần 3.md
include/: AudioManager.h  Board.h  GameLoop.h  InputHandler.h  Renderer.h  SaveManager.h  ScoreManager.h  Tetromino.h
src/: AudioManager.cpp  Board.cpp  GameLoop.cpp  InputHandler.cpp  Renderer.cpp  SaveManager.cpp  ScoreManager.cpp  Tetromino.cpp  main.cpp
tests/: test_board.cpp  test_input.cpp  test_score.cpp  test_tetromino.cpp
